--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@firebase/app": "^0.3.3",
+    "@firebase/firestore": "^0.5.4",
     "firebase": "^5.0.4",
     "vue": "^2.5.2",
+    "vue-firestore": "^0.2.8",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
